--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^5.1.0",
     "serverless-http": "^3.2.0",
     "twilio": "^5.5.1"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.149",
+    "typescript": "^5.8.3"
   }
 }
